# Books-Library

./: .dockerignore  .env.example  Book.sql  README.md  docker-compose.yml  docker-entrypoint.sh  dockerfile  pyproject.toml  wsgi.py
src/: app.py  connections_handeller.py  db_handeller.py  default_config.py  exceptions.py  models.py  routes.py  security.py  utils.py
src/api/: routes.py
src/api/resources/: namespaces.py
src/api/resources/books/: controller.py  marshallers.py  parsers.py  services.py
src/api/resources/users/: controller.py  services.py
src/api/resources/users/marshallers/: users_serializers.py
src/api/resources/users/parsers/: user_get_parser.py  user_reset_password.py  user_sign_up_parser.py
src/api/resources/users/service/: user_service.py
src/api/support/: security.py
src/models_services/: book_model_services.py  review_model_services.py  user_model_services.py
supervisor/: default.conf
